# anna-v2

./: .env.shared  .gitignore  .gitmodules  ARCHITECTURE.md  Dockerfile  HOW_TO_DEPLOY.md  Makefile  README.md  TODO.md  anna.py  fly.toml  onetime_keypair_B4C8DDDC-7B65-4A94-B231-924A18177228.pem  pyproject.toml  pytest.ini  requirements.txt  setup_dev_env.sh  setup_local_env.sh  tmp
.github/hooks/: pre-commit
.github/workflows/: ci.yml  deploy_with_fly.yml
.meta/deploy/: .dockerignore  Dockerfile  fly.toml
.meta/develop/: lint_fmt_test.sh  pylint.toml  setup_local_env.sh
.meta/docs/: ARCHITECTURE.md  HOW_TO_DEPLOY.md
env_bucket/: __init__.py
google_spreadsheet_client/: __init__.py
member/: __init__.py  service.py
offiline_meeting/: __init__.py  controller.py  handler.py  service.py
slack_client/: __init__.py
sql/: tracking_thread_ddl.sql
src/: anna.py
src/ask_reply/: __init__.py  handler.py  service.py
src/config/: env_config.py  log_config.py
src/configuration/: __init__.py  env_configuration.py  log_configuration.py
src/event/: __init__.py
src/exception/: __init__.py  runtime_exception.py
src/google_spreadsheet_client/: __init__.py
src/handler/: bigchat.py  controller.py  decorator.py
src/implementation/: __init__.py  ausg_db.py  google_spreadsheet_client.py  llm_client.py  member_finder.py  qa_client.py  slack_client.py
src/member/: __init__.py  exceptions.py  member.py  service.py
src/offiline_meeting/: handler.py  service.py
src/offline_meeting/: __init__.py  handler.py
src/router/: __init__.py  router.py
(+62 files in other folders)
