[tool.ruff]
line-length = 120

[tool.poetry]
name = "anna"
version = "1.0.0"
description = "AUSG Notoriously Nerdy Assistant"
authors = ["AUSG Crew"]
readme = "README.md"

[tool.poetry.group.ci]
optional = true

[tool.poetry.group.ci.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.0.278"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = "^68.0.0"
slack-bolt = "^1.18.0"
pydantic-settings = "^2.0.2"
cachetools = "^5.3.1"
python-dateutil = "^2.8.2"
gspread = "^5.10.0"
gspread-formatting = "^1.1.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
